# wnacg-downloader

./: .dockerignore  Dockerfile.cli  README.md  docker-compose.cli.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docker-config/: wnacg-cli.json
public/: api-doc.html  api-doc.md
src/: App.tsx  AppContent.tsx  WebDownloadDashboard.tsx  bindings.ts  global.css  main.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  commands.rs  config.rs  download_manager.rs  events.rs  export.rs  extensions.rs  lib.rs  logger.rs  wnacg_client.rs
src-tauri/src/types/: comic.rs  comic_info.rs  get_shelf_result.rs  mod.rs  search_result.rs  user_profile.rs
src/components/: ComicCard.tsx  DownloadButton.tsx  DownloadShelfButton.tsx  FloatLabelInput.module.css  FloatLabelInput.tsx  IconButton.tsx
src/dialogs/: AboutDialog.tsx  BatchDownloadDialog.tsx  LogDialog.tsx  LoginDialog.tsx  SettingsDialog.tsx
src/panes/: ComicPane.tsx  SearchPane.tsx  ShelfPane.tsx
src/panes/DownloadedPane/: DownloadedPane.tsx
src/panes/DownloadedPane/components/: DownloadedComicCard.tsx
src/panes/ProgressPane/: ProgressPane.module.css  ProgressPane.tsx
src/panes/ProgressPane/components/: CompletedProgress.tsx  UncompletedProgresses.tsx
