[package]
name = "wnacg-downloader"
version = "0.1.0"
description = "WNACG downloader HTTP service"
authors = ["wmgylc"]
edition = "2021"

[lib]
name = "wnacg_downloader_lib"
crate-type = ["rlib"]

[dependencies]
tauri = { version = "2", features = [] }
clap = { version = "4.5.39", features = ["derive"] }
urlencoding = "2.1.3"
axum = "0.8.4"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaserde = { version = "0.12.0", features = ["yaserde_derive"] }

specta = { version = "2.0.0-rc", features = ["derive", "serde_json"] }

reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
reqwest-retry = { version = "0.7.0" }
reqwest-middleware = { version = "0.4.0" }

anyhow = { version = "1.0.96" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "local-time"] }
tracing-appender = { version = "0.2.3" }
notify = { version = "8.0.0" }
tokio = { version = "1.43.0", features = ["full"] }
scraper = { version = "0.23.1" }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
bytes = { version = "1.10.1" }
lopdf = { git = "https://github.com/lanyeeee/lopdf", features = ["embed_image_jpeg", "embed_image_png", "embed_image_webp"] }
uuid = { version = "1.15.1", features = ["v4"] }
zip = { version = "2.2.3", default-features = false }
rayon = { version = "1.11.0" }
strfmt = { version = "0.2.5" }
rusqlite = { version = "0.32.1", features = ["bundled"] }


[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
